# nixtract

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  example-graph-for-jedi.jsonl  flake.nix  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: build_nix.yml  ci.yml  release.yml
conf/: init-graph.groovy  janusgraph-inmemory.properties  janusgraph-server.yaml
nix/: graph-explorer.nix  nix-graph-explorer.nix
nix_graph_explorer/: cli.py
nixtract/: __main__.py  cli.py  describe-derivation.nix  find-attribute-paths.nix  lib.nix  model.py  threading.py
nixtract/c_bindings/: deque.py  extract.py
nixtract/subprocesses/: describe-derivation.nix  extract.py  find-attribute-paths.nix
src/: cli.rs  error.rs  lib.rs  main.rs  message.rs
src/nix/: describe_derivation.nix  describe_derivation.rs  find_attribute_paths.nix  find_attribute_paths.rs  lib.nix  lib.rs  mod.rs  narinfo.rs  substituters.rs
tests/: test_cli.py  test_model.py
tests/fixtures/flake-direct-buildInput/: flake.nix
tests/fixtures/flake-direct-nativeBuildInput/: flake.nix
tests/fixtures/flake-direct-nativeBuildInput/pkg1/: pkg1
tests/fixtures/flake-direct-nativeBuildInput/pkg2/: pkg2
tests/fixtures/flake-three-levels/: flake.nix
tests/fixtures/flake-three-levels/pkg3/: pkg3
tests/fixtures/flake-trivial/: flake.nix
tests/fixtures/flake-trivial-rust/: flake.nix
