[package]
name = "nixtract"
version = "0.1.0"
authors = [
    "Erin van der Veen <nixtract@erinvanderveen.nl>",
    "Guillaume Desforges <guillaume.desforges@tweag.io>",
    "Dorran Howell <dorran.howell@tweag.io>",
    "Tweag I/O",
]
edition = "2021"
description = "A CLI tool and library to extract the graph of derivations from a Nix flake."
homepage = "github.com/tweag/nixtract"
repository = "github.com/tweag/nixtract"
license = "MIT OR Apache-2.0"
keywords = ["nix", "flake", "graph", "derivation"]
categories = ["development-tools"]
exclude = [
    "tests/**",
    "examples/**",
    "benches/**",
    "docs/**",
    "target/**",
    ".github/**",
]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
env_logger = "0.11.1"
flume = "0.11.0"
log = "0.4.20"
num_cpus = "1.16.0"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
shell-escape = "0.1.5"
tempfile = "3.9.0"
thiserror = "1.0.56"
