[package]
name = "nixtract"
version = "0.2.0"
authors = [
    "Erin van der Veen <nixtract@erinvanderveen.nl>",
    "Guillaume Desforges <guillaume.desforges@tweag.io>",
    "Dorran Howell <dorran.howell@tweag.io>",
    "Tweag I/O",
]
edition = "2021"
description = "A CLI tool and library to extract the graph of derivations from a Nix flake."
homepage = "github.com/tweag/nixtract"
repository = "https://github.com/tweag/nixtract"
license = "MIT OR Apache-2.0"
keywords = ["nix", "flake", "graph", "derivation"]
categories = ["development-tools"]
exclude = [
    "tests/**",
    "examples/**",
    "benches/**",
    "docs/**",
    "target/**",
    ".github/**",
]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
env_logger = "0.11.1"
flume = "0.11.0"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
log = "0.4.20"
num_cpus = "1.16.0"
rayon = "1.8.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
schemars = "0.8.16"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
shell-escape = "0.1.5"
tempfile = "3.9.0"
thiserror = "1.0.56"

[dev-dependencies]
pretty_assertions = "1.4.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
