[tool.poetry]
name = "nixtract"
version = "1.0.0"
description = "A CLI tool to extract the graph of derivations from a Nix flake."
authors = [
    "Guillaume Desforges <guillaume.desforges@tweag.io>",
    "Dorran Howell <dorran.howell@tweag.io>"
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "nixtract" },
]

[tool.poetry.scripts]
nixtract = "nixtract.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"

pydantic = "^1.10.7"
click = "^8.1.3"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
pyright = "^1.1.298"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
